istio/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - my-istio-gateway
  http:
  - match:
    - uri:
        prefix: /mon-service
    route:
    - destination:
        host: mon-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /user-service
    route:
    - destination:
        host: user-service
        port:
          number: 80
